--- a/homepage/homepg.html
+++ b/homepage/homepg.html
@@ -54,6 +54,14 @@
 		jump_fifthad.innerHTML = "回転広告";
 		fifth_ad.appendChild(jump_fifthad);
 
+		var sixth_ad = document.createElement('a');
+		sixth_ad.href = "./sixthad/inspection.html"
+		title.appendChild(sixth_ad);
+
+		var jump_sixthad = document.createElement('p');
+		jump_sixthad.innerHTML = "手書き広告";
+		sixth_ad.appendChild(jump_sixthad);
+
 	</script>
 </body>
 
