--- a/homepage/index.html
+++ b/homepage/index.html
@@ -11,7 +11,10 @@
 
 <body>
 	<script>
+		document.body.style.backgroundColor = "#FBF1FF";
+
 		var title = document.createElement('h1');
+		title.innerHTML = "Original ads coded using Node.js";
 		document.body.appendChild(title);
 
 		var first_ad = document.createElement('a');
@@ -20,6 +23,8 @@
 
 		var jump_firstad = document.createElement('p');
 		jump_firstad.innerHTML = "おすすめリスト広告";
+		jump_firstad.style.fontSize = "15px";
+		jump_firstad.style.color = "#156B00";
 		first_ad.appendChild(jump_firstad);
 
 		var second_ad = document.createElement('a');
@@ -28,6 +33,8 @@
 
 		var jump_secondad = document.createElement('p');
 		jump_secondad.innerHTML = "メッセ風広告";
+		jump_secondad.style.fontSize = "15px";
+		jump_secondad.style.color = "#156B00";
 		second_ad.appendChild(jump_secondad);
 
 		var third_ad = document.createElement('a');
@@ -36,6 +43,8 @@
 
 		var jump_thirdad = document.createElement('p');
 		jump_thirdad.innerHTML = "パラパラ広告";
+		jump_thirdad.style.fontSize = "15px";
+		jump_thirdad.style.color = "#156B00";
 		third_ad.appendChild(jump_thirdad);
 
 		var fourth_ad = document.createElement('a');
@@ -44,6 +53,8 @@
 
 		var jump_fourthad = document.createElement('p');
 		jump_fourthad.innerHTML = "派手広告";
+		jump_fourthad.style.fontSize = "15px";
+		jump_fourthad.style.color = "#156B00";
 		fourth_ad.appendChild(jump_fourthad);
 
 		var fifth_ad = document.createElement('a');
@@ -52,6 +63,8 @@
 
 		var jump_fifthad = document.createElement('p');
 		jump_fifthad.innerHTML = "回転広告";
+		jump_fifthad.style.fontSize = "15px";
+		jump_fifthad.style.color = "#156B00";
 		fifth_ad.appendChild(jump_fifthad);
 
 		var sixth_ad = document.createElement('a');
@@ -60,6 +73,8 @@
 
 		var jump_sixthad = document.createElement('p');
 		jump_sixthad.innerHTML = "手書き広告";
+		jump_sixthad.style.fontSize = "15px";
+		jump_sixthad.style.color = "#156B00";
 		sixth_ad.appendChild(jump_sixthad);
 
 	</script>
