I forgot ac adapter again

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -88,7 +88,7 @@
 		seventh_ad.appendChild(jump_seventhad);
 
 		var eighth_ad = document.createElement('a');
-		eighth_ad.href = "./eightad/inspection.html"
+		eighth_ad.href = "./eighthad/inspection.html"
 		title.appendChild(eighth_ad);
 
 		var jump_eighthad = document.createElement('p');
